# backend-apis

./: .env.sample  .gitignore  Cargo.toml  README.md  hardhat.config.ts  index.ts  logs.txt  package-lock.json  package.json  query_testing.md
config/: chains.ts  database.ts
contracts/: Bridge.sol  BridgeStorage.sol  BridgeValidator.sol  IBridgeValidator.sol  MockERC20.sol  MockERC20Token.sol  Proxy.sol  ReentrancyAttacker.sol
contracts/interfaces/: IPyth.sol
database/: connection.ts
database/models/: transaction.ts
ignition/modules/: Bridge.ts  MockERC20Token.ts  Proxy.ts
interfaces/: requests.ts  responses.ts
resolvers/: apikey.resolver.ts  bridge.resolver.ts  mutations.ts  query.ts  subscriptions.ts
schema/: schema.graphql  schema.ts
scripts/: BridgeToken.ts  deploy-b10.ts  generate-signature.ts  liquidity.ts  mint.ts
services/: apikey.service.ts  bridge.service.ts  chain.service.ts  events.service.ts  gas.service.ts  price.service.ts  relayer.service.ts  token.service.ts  transaction.service.ts  validator.service.ts
src/: config.rs  errors.rs  main.rs
src/api/: handlers.rs  intent_handlers.rs  mod.rs
src/models/: api_response.rs  intent.rs  mod.rs  network_config.rs  network_status.rs  token.rs  transaction.rs  transfer.rs  wallet.rs
src/services/: blockchain_service.rs  intent_service.rs  mod.rs  network_config.rs  wallet_service.rs  (+1 more)
test/: Bridge copy.ts  Bridge-Smart-Contract.ts  Bridge.test.custom.ts  Bridge.test.ts  Bridge.ts  bridge-api.test.ts  event-test.ts
types/: context.ts  index.ts
utils/: abi.ts  bridgeUtils.ts  common.ts
(+14 files in other folders)
