[package]
name = "decimal-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.5"
serde = { version = "1.0.213", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
serde_json = "1.0"
log = "0.4"
thiserror = "1.0"
dotenv = "0.15"
cargo-watch = "8.5.3"
